# rust-arch

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
alpm-rs/: Cargo.toml  README.md
alpm-rs/src/: callbacks.rs  clib.rs  db.rs  dependency.rs  enums.rs  error.rs  lib.rs  list.rs  macros.rs  package.rs  question.rs  types.rs
alpm-rs/tests/: alpm.rs  db.rs  package.rs  types.rs
aur-client/: Cargo.toml  README.md
aur-client/src/: aur.rs  lib.rs
aur-client/src/pkgbuild/: parse.rs  tokenize.rs
aur-client/tests/: aur.rs  pkgbuild.rs
pacman/: Cargo.toml
pacman/src/: config.rs  ini.rs  lib.rs  pacman_conf.rs
pacman/tests/: config.rs
