[package]
name = "alpm-rs"
version = "0.1.22"
authors = ["Sam <sam.mackenzie@live.com>"]
edition = "2018"
license="MIT"
description="aplm bindings and wrapper for rust"
keywords = ["pacman", "libalpm", "alpm", "arch", "linux"]
repository="https://github.com/BahNahNah/rust-arch/tree/master/alpm-rs"
documentation="https://docs.rs/alpm-rs"
readme="README.md"

[dependencies]
libc = "0.2.48"
